--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,10 @@ path = "src/main.rs"
 dll-syringe = "0.15.2"
 winapi-easy = "0.1.0"
 winapi = { version = "0.3.9", features = ["winuser"] }
-ratatui = { version = "0.22.0", features = ["all-widgets", "crossterm"] }
-crossterm = "0.27.0"
 winreg = "0.50.0"
 anyhow = "1.0.72"
+nwg = { version = "^1.0.12", package = "native-windows-gui" }
+native-windows-derive = "1.0.3"
+
+[build-dependencies]
+embed-manifest = "1.3.1"
