--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,10 @@ winreg = "0.50.0"
 anyhow = "1.0.72"
 nwg = { version = "^1.0.12", package = "native-windows-gui" }
 native-windows-derive = "1.0.3"
+directories = "5.0.1"
+toml = "0.7.6"
+serde = { version = "1.0.183", features = ["derive"] }
+current_locale = "0.1.1"
 
 [build-dependencies]
 embed-manifest = "1.3.1"
