--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "at-vxa-shortcuts-override"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 authors = ["Axer/TheDarkAxer/Primekick <thetrueaxer@gmail.com>"]
+build = "build.rs"
 
 [lib]
 crate-type = ["cdylib"]
@@ -19,7 +20,7 @@ winapi-easy = "0.1.0"
 winapi = { version = "0.3.9", features = ["winuser"] }
 winreg = "0.50.0"
 anyhow = "1.0.72"
-nwg = { version = "^1.0.12", package = "native-windows-gui" }
+nwg = { version = "^1.0.12", package = "native-windows-gui", features = ["embed-resource", "image-decoder"] }
 native-windows-derive = "1.0.3"
 directories = "5.0.1"
 toml = "0.7.6"
@@ -28,3 +29,4 @@ current_locale = "0.1.1"
 
 [build-dependencies]
 embed-manifest = "1.3.1"
+embed-resource = "2.2.0"
