--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,3 +1,3 @@
 [toolchain]
-channel = "nightly"
-targets = ["i686-pc-windows-msvc"]
+channel = "nightly-i686-pc-windows-msvc"
+targets = [ "i686-pc-windows-msvc" ]
