--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,17 +4,14 @@ version = "0.2.0"
 edition = "2021"
 authors = ["Axer/TheDarkAxer/Primekick <thetrueaxer@gmail.com>"]
 build = "build.rs"
-
-[lib]
-crate-type = ["cdylib"]
-name = "at_vxa_so"
-path = "src/lib.rs"
+publish = false
 
 [[bin]]
 name = "vxa_shortcuts_override"
 path = "src/main.rs"
 
 [dependencies]
+at_vxa_so = { path = "dll-lib" }
 dll-syringe = "0.15.2"
 winapi-easy = "0.1.0"
 winapi = { version = "0.3.9", features = ["winuser"] }
@@ -30,3 +27,6 @@ current_locale = "0.1.1"
 [build-dependencies]
 embed-manifest = "1.3.1"
 embed-resource = "2.2.0"
+
+[profile.release]
+opt-level = "s"
